[project]
name = "pdfscantotext"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "openai>=1.83.0",
    "pdf2image>=1.17.0",
    "pillow>=11.2.1",
    "tiktoken>=0.9.0",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
